# jellyfin-user-ratings

./: .dockerignore  .flaskenv  .gitignore  .projections.json  .python-version  Dockerfile  LICENSE  Makefile  README.md  docker-compose.example.yml  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: docker-publish.yml
backend/: __init__.py  backendupdoot.py  db.py  helpers.py  logger.py  models.py  settings.py  updoot.py
backend/routes/: admin.py  assets.py  comments.py  recommendations.py
backend/util/: request_hooks.py
dev/: Caddyfile  Caddyfile.local
dev/jellyfin/config/config/: system.xml
dev/jellyfin/config/plugins/JavaScript Injector_3.3.0.0/: meta.json
dev/jellyfin/config/plugins/configurations/: Jellyfin.Plugin.JavaScriptInjector.xml
dev/jellyfin/config/root/default/Movies/: options.xml
dev/jellyfin/config/root/default/Shows/: options.xml
frontend/: .eslintrc.json  package.json
frontend/src/: injector.js  updoot.js
src/updoot_service/: __main__.py  backendupdoot.py  settings.py
web/templates/: injector.js  updoot.js
